@@ -44,6 +44,7 @@
 #undef HAVE_NEWLOCALE
 #undef HAVE_LOCALECONV
 #undef HAVE_LOCALE_H
+#undef HAVE_XLOCALE_H
 #undef HAVE_LANGINFO_H
 #undef HAVE_NL_LANGINFO_CODESET
 
